centered elements, added text-overflow per reviewer notes. fixed distance between header/profile

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -3,22 +3,24 @@
 }
 .cards__list {
   display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(auto-fit, 282px);
-  gap: 20px 17px;
-  padding: 0;
-  margin: 0;
+  column-gap: 17px;
+  row-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 0 auto;
+  list-style: none;
+  padding-left: 0;
 }
 
 @media screen and (min-width: 320px) and (max-width: 760px) {
   .cards {
+    width: auto;
+    align-items: center;
     margin-right: 19px;
   }
   .cards__list {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(6, 1fr);
-    width: 282px;
-    padding-left: 12px;
+    place-items: center;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1275px) {
