--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -5,6 +5,7 @@
   width: 100%;
   position: relative;
   margin: 0 auto;
+  margin-top: 36.25px;
 }
 
 .profile__info {
@@ -49,6 +50,9 @@
   line-height: 1.14;
   grid-area: title;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .profile__description {
   font-family: "Inter", Arial, sans-serif;
@@ -57,9 +61,6 @@
   font-weight: 400;
   grid-area: description;
   margin-top: 16px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
 }
 .profile__image {
   height: 120px;
@@ -81,6 +82,9 @@
     font-size: 14px;
     margin-top: 14px;
     margin-bottom: 36px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
   .profile__image {
     justify-self: center;
@@ -104,6 +108,7 @@
   .profile__add-button {
     width: 282px;
     margin-right: 19px;
+    margin-left: 19px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1280px) {
